--- a/main.css
+++ b/main.css
@@ -8,6 +8,7 @@ body, h1, h2, p, ul, li, button {
 body {
     font-family: Arial, sans-serif;
     background-color: #f0f0f0;
+    
 }
 
 header {
@@ -17,21 +18,43 @@ header {
     padding: 10px;
 }
 
-nav ul {
+.navbar {
+    background-color: #333; 
+    overflow: hidden;
+}
+
+.navbar ul {
     list-style-type: none;
-    background-color: #444;
+    margin: 0;
+    padding: 0;
+}
+
+.navbar li {
+    float: left;
+}
+
+.navbar a {
+    display: block;
+    color: #fff; 
     text-align: center;
-    padding: 10px;
-}
-
-nav li {
-    display: inline;
-    margin: 0 20px;
-}
-
-nav a {
+    padding: 14px 16px; 
     text-decoration: none;
-    color: #fff;
+}
+
+.navbar a:hover {
+    background-color: #ddd; 
+    color: #333;
+}
+
+@media screen and (max-width: 600px) {
+    .navbar {
+        overflow: auto;
+    }
+
+    .navbar li {
+        float: none;
+        text-align: center;
+    }
 }
 
 main {
@@ -87,4 +110,10 @@ footer {
 img{
     height: 90px;
     width: auto;
+}
+
+#cart-total{
+    text-align: center;
+    font-weight: bold;
+    font-size: 40px
 }
