--- a/main.css
+++ b/main.css
@@ -5,17 +5,27 @@ body, h1, h2, p, ul, li, button {
 }
 
 /* Basic styling */
-body {
+body, html {
     font-family: Arial, sans-serif;
     background-color: #f0f0f0;
-    
+    height: 100%;
+    margin: 0;
+    padding: 0;
+}
+
+.container{
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh;
 }
 
 header {
-    background-color: #333;
-    color: #fff;
-    text-align: center;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
     padding: 10px;
+    background-color: #333; /* Adjust the background color as needed */
+    color: white; 
 }
 
 .navbar {
@@ -65,6 +75,8 @@ main {
     flex-wrap: wrap;
     justify-content: center;
     margin: 20px;
+    flex-grow: 1; /* Allow the main content to grow to fill available space */
+    padding: 20px;
 }
 
 .product {
@@ -74,6 +86,7 @@ main {
     margin: 10px;
     text-align: center;
     max-width: 300px;
+    max-height: 210px;
 }
 
 .product img {
@@ -103,11 +116,11 @@ aside {
 }
 
 footer {
-    background-color: #333;
-    color: #fff;
-    text-align: center;
     padding: 10px;
+    background-color: #333; /* Adjust the background color as needed */
+    color: white; /* Adjust text color as needed */
 }
+
 
 
 img{
@@ -152,4 +165,18 @@ margin-top: 16%;
     height: 400px;
     width: 300px;
     margin:5px 5px 15px 5px;
+}
+
+/* main.css */
+.header-content {
+    display: flex;
+    align-items: center;
+}
+
+button {
+    margin-right: 10px; 
+}
+
+#back-button{
+    background-color: #fff;
 }
