--- a/main.css
+++ b/main.css
@@ -137,15 +137,15 @@ img{
 }
 #Letöltés
 {
-font-size: 8vw;
+font-size: 3vw;
+height: 5vw;
 background-color: red;
 box-shadow: 10px 10px;
 color: green;
 font-family:PressStart2P;
-margin-top: 16%;
+
 }
 #dowbcg{
-    background-image:url(download-background.jpg);
     height: auto;
     background-repeat:no-repeat;
     background-size: cover;
