--- a/main.css
+++ b/main.css
@@ -182,4 +182,30 @@ button {
 #back-button{
     background-color: #fff;
 }
+label {
+    color: white;
+}
+form{
+float: right;
+}
+
+.navbar button:hover {
+    background-color: #ddd; 
+    color: #333;
+    width: 100%;
+}
+#regisztralas{
+    background-color: #333;
+    color: #fff;
+    border: none;
+    padding: 10px 20px;
+    margin-top: 10px;
+    cursor: pointer;
+}
+.navbar #regisztralas:hover {
+    background-color: #ddd; 
+    color: #333;
+    width: 100%;
+    
+}
 
