--- a/main.css
+++ b/main.css
@@ -1,10 +1,8 @@
-/* Reset some default browser styles */
 body, h1, h2, p, ul, li, button {
     margin: 0;
     padding: 0;
 }
 
-/* Basic styling */
 body, html {
     font-family: Arial, sans-serif;
     background-color: #f0f0f0;
@@ -24,12 +22,12 @@ header {
     justify-content: space-between;
     align-items: center;
     padding: 10px;
-    background-color: #333; /* Adjust the background color as needed */
+    background-color: #333; 
     color: white; 
 }
 
 .navbar {
-    background-color: #333; 
+    background-color: #333;
     overflow: hidden;
 }
 
@@ -45,18 +43,30 @@ header {
 
 .navbar a {
     display: block;
-    color: #fff; 
+    color: #fff;
     text-align: center;
-    padding: 14px 16px; 
+    padding: 14px 16px;
     text-decoration: none;
 }
-.navbar{
+
+.navbar {
     box-shadow: 10px 10px 0px 0px;
     margin-bottom: 100px;
 }
+
 .navbar a:hover {
-    background-color: #ddd; 
+    background-color: #ddd;
     color: #333;
+}
+
+/* Új CSS a bejelentkezési űrlap elrendezéséhez */
+.regform {
+    text-align: left;
+    padding-left: 20px;
+}
+
+.input-group {
+    margin-bottom: 10px;
 }
 
 @media screen and (max-width: 600px) {
@@ -75,7 +85,7 @@ main {
     flex-wrap: wrap;
     justify-content: center;
     margin: 20px;
-    flex-grow: 1; /* Allow the main content to grow to fill available space */
+    flex-grow: 1;
     padding: 20px;
 }
 
@@ -119,8 +129,8 @@ aside {
 
 footer {
     padding: 10px;
-    background-color: #333; /* Adjust the background color as needed */
-    color: white; /* Adjust text color as needed */
+    background-color: #333; 
+    color: white; 
 }
 
 
@@ -130,11 +140,6 @@ img{
     width: auto;
 }
 
-#cart-total{
-    text-align: center;
-    font-weight: bold;
-    font-size: 40px
-}
 #Letöltés
 {
 font-size: 3vw;
@@ -163,12 +168,88 @@ font-family:PressStart2P;
 .infoimg{
     height: 200px;
 }
-.card{
-    height: 400px;
-    width: 300px;
-    margin:5px 5px 15px 5px;
-}
 
+.flip-card-3D-wrapper {
+  width: 60%;
+  height: 80%;
+  max-width: 300px;
+  max-height: 500px;
+  position: relative;
+  -o-perspective: 900px;
+  -webkit-perspective: 900px;
+  -ms-perspective: 900px;
+  perspective: 900px;
+  margin: 0 auto;
+}
+#flip-card {
+  width: 100%;
+  height: 100%;
+  text-align: center;
+  margin: 50px auto;
+  position: absolute;
+  -o-transition: all 1s ease-in-out;
+  -webkit-transition: all 1s ease-in-out;
+  -ms-transition: all 1s ease-in-out;
+  transition: all 1s ease-in-out;
+  -o-transform-style: preserve-3d;
+  -webkit-transform-style: preserve-3d;
+  -ms-transform-style: preserve-3d;
+  transform-style: preserve-3d;
+}
+.do-flip {
+  -o-transform: rotateY(-180deg);
+  -webkit-transform: rotateY(-180deg);
+  -ms-transform: rotateY(-180deg);
+  transform: rotateY(-180deg);
+}
+#flip-card-btn-turn-to-back, #flip-card-btn-turn-to-front {
+  position: absolute;
+  top: 8px;
+  right: 8px;
+  width: 40px;
+  height: 40px;
+  background: white;
+  cursor: pointer;
+  visibility: hidden;
+  font-family: 'Open Sans', sans-serif;
+  font-weight: 600;
+  font-size: .7em;
+  padding: 0;
+  color: grey;
+  border: 1px solid grey;
+}
+#flip-card .flip-card-front, #flip-card .flip-card-back{
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  -o-backface-visibility: hidden;
+  -webkit-backface-visibility: hidden;
+  -ms-backface-visibility: hidden;
+  backface-visibility: hidden;
+  z-index: 2;
+  -webkit-box-shadow: 5px 6px 32px 2px rgba(133,133,133,0.71);
+  -moz-box-shadow: 5px 6px 32px 2px rgba(133,133,133,0.71);
+  box-shadow: 5px 6px 32px 2px rgba(133,133,133,0.71);
+}
+#flip-card .flip-card-front {
+    background: lightgreen;
+    border:1px solid grey;
+}
+#flip-card .flip-card-back {
+    background: lightblue;
+    border: 1px solid grey;
+    -o-transform: rotateY(180deg);
+    -webkit-transform: rotateY(180deg);
+    -ms-transform: rotateY(180deg);
+    transform: rotateY(180deg);
+}
+#flip-card .flip-card-front p, #flip-card .flip-card-back p {
+  color: grey;
+  display: block;
+  position: absolute;
+  top: 40%;
+  width: 100%;
+}
 /* main.css */
 .header-content {
     display: flex;
@@ -243,11 +324,11 @@ button[type="submit"]:hover {
 }
 
 button#payment-button {
-    width: 80px;
+    width: 100px;
     height: auto;
     justify-content: center;
     text-align: center;
-    display: inline;
+    
 }
 
 form#payment-form {
