--- a/main.css
+++ b/main.css
@@ -1,9 +1,16 @@
-body, h1, h2, p, ul, li, button {
+body,
+h1,
+h2,
+p,
+ul,
+li,
+button {
     margin: 0;
     padding: 0;
 }
 
-body, html {
+body,
+html {
     font-family: Arial, sans-serif;
     background-color: #f0f0f0;
     height: 100%;
@@ -11,7 +18,7 @@ body, html {
     padding: 0;
 }
 
-.container{
+.container {
     display: flex;
     flex-direction: column;
     min-height: 100vh;
@@ -22,8 +29,8 @@ header {
     justify-content: space-between;
     align-items: center;
     padding: 10px;
-    background-color: #333; 
-    color: white; 
+    background-color: #333;
+    color: white;
 }
 
 .navbar {
@@ -96,7 +103,7 @@ main {
     margin: 10px;
     text-align: center;
     max-width: auto;
-    max-height: 300px ;
+    max-height: 300px;
 }
 
 .product img {
@@ -124,39 +131,40 @@ aside {
     text-align: center;
     max-width: 300px;
     justify-content: center;
-    
+
 }
 
 footer {
     padding: 10px;
-    background-color: #333; 
-    color: white; 
+    background-color: #333;
+    color: white;
 }
 
 
 
-img{
+img {
     height: 90px;
     width: auto;
 }
 
-#Letöltés
-{
-font-size: 3vw;
-height: 5vw;
-background-color: red;
-box-shadow: 10px 10px;
-color: green;
-font-family:PressStart2P;
+#Letöltés {
+    font-size: 3vw;
+    height: 5vw;
+    background-color: red;
+    box-shadow: 10px 10px;
+    color: green;
+    font-family: PressStart2P;
 
 }
-#dowbcg{
+
+#dowbcg {
     height: auto;
-    background-repeat:no-repeat;
+    background-repeat: no-repeat;
     background-size: cover;
 }
-#dg-main{
-    
+
+#dg-main {
+
     width: auto;
 }
 
@@ -165,91 +173,46 @@ font-family:PressStart2P;
     src: url('PressStart2P.ttf');
 
 }
-.infoimg{
+
+.infoimg {
     height: 200px;
 }
 
-.flip-card-3D-wrapper {
-  width: 60%;
-  height: 80%;
-  max-width: 300px;
-  max-height: 500px;
-  position: relative;
-  -o-perspective: 900px;
-  -webkit-perspective: 900px;
-  -ms-perspective: 900px;
-  perspective: 900px;
-  margin: 0 auto;
+.contact-card {
+    background-color: #fff;
+    border-radius: 10px;
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
+    margin: 20px;
+    padding: 20px;
+    width: 250px;
+    height: 400px;
+    text-align: center;
+    justify-content: center;
 }
-#flip-card {
-  width: 100%;
-  height: 100%;
-  text-align: center;
-  margin: 50px auto;
-  position: absolute;
-  -o-transition: all 1s ease-in-out;
-  -webkit-transition: all 1s ease-in-out;
-  -ms-transition: all 1s ease-in-out;
-  transition: all 1s ease-in-out;
-  -o-transform-style: preserve-3d;
-  -webkit-transform-style: preserve-3d;
-  -ms-transform-style: preserve-3d;
-  transform-style: preserve-3d;
+
+.contact-card h2 {
+    margin-top: 0;
+    font-size: 20px;
 }
-.do-flip {
-  -o-transform: rotateY(-180deg);
-  -webkit-transform: rotateY(-180deg);
-  -ms-transform: rotateY(-180deg);
-  transform: rotateY(-180deg);
+
+.contact-card h4 {
+    margin-top: 0;
+    font-size: 14px;
 }
-#flip-card-btn-turn-to-back, #flip-card-btn-turn-to-front {
-  position: absolute;
-  top: 8px;
-  right: 8px;
-  width: 40px;
-  height: 40px;
-  background: white;
-  cursor: pointer;
-  visibility: hidden;
-  font-family: 'Open Sans', sans-serif;
-  font-weight: 600;
-  font-size: .7em;
-  padding: 0;
-  color: grey;
-  border: 1px solid grey;
+
+.contact-card button {
+    background-color: #007bff;
+    color: #fff;
+    border: none;
+    border-radius: 5px;
+    padding: 10px 20px;
+    cursor: pointer;
 }
-#flip-card .flip-card-front, #flip-card .flip-card-back{
-  width: 100%;
-  height: 100%;
-  position: absolute;
-  -o-backface-visibility: hidden;
-  -webkit-backface-visibility: hidden;
-  -ms-backface-visibility: hidden;
-  backface-visibility: hidden;
-  z-index: 2;
-  -webkit-box-shadow: 5px 6px 32px 2px rgba(133,133,133,0.71);
-  -moz-box-shadow: 5px 6px 32px 2px rgba(133,133,133,0.71);
-  box-shadow: 5px 6px 32px 2px rgba(133,133,133,0.71);
+
+.contact-card button:hover {
+    background-color: #0056b3;
 }
-#flip-card .flip-card-front {
-    background: lightgreen;
-    border:1px solid grey;
-}
-#flip-card .flip-card-back {
-    background: lightblue;
-    border: 1px solid grey;
-    -o-transform: rotateY(180deg);
-    -webkit-transform: rotateY(180deg);
-    -ms-transform: rotateY(180deg);
-    transform: rotateY(180deg);
-}
-#flip-card .flip-card-front p, #flip-card .flip-card-back p {
-  color: grey;
-  display: block;
-  position: absolute;
-  top: 40%;
-  width: 100%;
-}
+
 /* main.css */
 .header-content {
     display: flex;
@@ -257,25 +220,28 @@ font-family:PressStart2P;
 }
 
 button {
-    margin-right: 10px; 
+    margin-right: 10px;
 }
 
-#back-button{
+#back-button {
     background-color: #fff;
 }
+
 label {
     color: white;
 }
-form{
-float: right;
+
+form {
+    float: right;
 }
 
 .navbar button:hover {
-    background-color: #ddd; 
+    background-color: #ddd;
     color: #333;
     width: 100%;
 }
-#regisztralas{
+
+#regisztralas {
     background-color: #333;
     color: #fff;
     border: none;
@@ -283,17 +249,18 @@ float: right;
     margin-top: 10px;
     cursor: pointer;
 }
+
 .navbar #regisztralas:hover {
-    background-color: #ddd; 
+    background-color: #ddd;
     color: #333;
     width: 100%;
-    
+
 }
 
 .form-group {
     margin-bottom: 20px;
     color: black;
-    
+
 }
 
 label {
@@ -309,6 +276,7 @@ input[type="password"] {
     border: 1px solid #ccc;
     border-radius: 5px;
 }
+
 button[type="submit"] {
     background-color: #007bff;
     color: #fff;
@@ -328,22 +296,23 @@ button#payment-button {
     height: auto;
     justify-content: center;
     text-align: center;
-    
+
 }
 
 form#payment-form {
     text-align: center;
     justify-items: center;
 }
-label{
+
+label {
     color: #333;
 }
 
-h1.fizetes{
+h1.fizetes {
     text-align: center;
     padding-bottom: 15px;
 }
 
-#payment{
+#payment {
     width: 300px;
 }
